# libbase64

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  get-version
m4/: ax_rpm_init.m4
src/: Makefile.am  base16.c  base16.h  base32.c  base32.h  base64.c  base64.h
tests/: Makefile.am  check_base16.c  check_base32.c  check_base64.c
util/: b16_rev.py  b32_rev.py  b64_rev.py
