AM_CFLAGS = $(MORE_CFLAGS)
AM_CPPFLAGS = $(MORE_CPPFLAGS)
AM_LDFLAGS = $(MORE_LDFLAGS)
instdir = $(PREFIX)/lib/

inst_LIBRARIES = libbase64.a libbase32.a

libbase64_a_SOURCES = base64.h base64.c
libbase64_a_CFLAGS  = $(AM_CFLAGS)

libbase32_a_SOURCES = base32.h base32.c
libbase32_a_CFLAGS  = $(AM_CFLAGS)
